# rock-paper-scissors

./: .gitignore  README.md
contract/rps/: Cargo.toml  README.md  deploy.sh  deploy_prod.sh  lib.rs
rock-paper-scissors/: .env  Dockerfile  package-lock.json  package.json
rock-paper-scissors/src/: App.css  App.js  modal.js  rps.service.js  wallet-connect.js
rock-paper-scissors/src/components/historical/: historical.component.css  historical.component.js
rock-paper-scissors/src/resources/: rps.json
