[package]
name = "rps"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
beacon = { path = "../../../simple_relay/beacon", default-features = false, features = ["ink-as-dependency"] } 
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch="w3fbls-migration", default-features = false}

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "beacon/std",
    "etf-crypto-primitives/std"
]
ink-as-dependency = []
e2e-tests = []
